--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Zhengyuan Li"
-  avatar           : "profile.png"
-  bio              : "Master's Student in CS at UIUC. I'm working on human motion synthesis."
+  avatar           : "profile.jpg"
+  bio              : "Master's Student in CS at UIUC. "
   location         : "Urbana, Illinois"
   employer         :
   pubmed           : 
